welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: '=' expected but '(' found.
def memo() : Array[Color] (getMondeHauteur) {
                          ^Array2:35: error: illegal start of simple expression
}
^